--- a/projectmindspace/Website-main/sign.html
+++ b/projectmindspace/Website-main/sign.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GET OUT OF THE BOX</title>
+    <title>MIND SPACE</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,7 +66,7 @@
 </head>
 <body>
     <header>
-        <h1>GET OUT OF THE BOX</h1>
+        <h1>MINDSPACE</h1>
     </header>
     <main>
         <div class="container">
